# tcadana

./: .bumpversion.cfg  .gitignore  README.md  pyproject.toml  setup.py
src/tcadana/: __init__.py  version.py
src/tcadana/cli/: __init__.py  browser.py  cli.py
src/tcadana/database/: garter_QA_data.py
src/tcadana/json_tools/: __init__.py  filters.py
src/tcadana/parser/: __init__.py  dfise_text.py  tdr.py
src/tcadana/serialization/: __init__.py  base.py
src/tcadana/tdrio/: __init__.py  core.py
src/tcadana/tools/: __init__.py  tri_tools.py
src/tcadana/tools/database/: garter_QA_data.py
src/tcadana/tools/triangles/: __init__.py  crop.py
src/tcadana/visualization/: interactive.py
